--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ DerivedData/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
 xcuserdata/
 
 ## Other
